feat: sistema completo de controle financeiro com Telegram Bot e Dashboard Analytics
- Bot Telegram com NLP para processamento de gastos
- Dashboard web interativo com Chart.js
- Integração Google Sheets API para persistência
- Relatórios PDF automatizados
- Analytics avançados com insights de IA
- Arquitetura profissional com documentação completa
- API RESTful para integrações futuras
- Deploy-ready com Railway/Heroku support

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-# Arquivos de ambiente e credenciais
+# Environment variables
 .env
-credentials.json
+
+# Google Credentials
+config/credentials.json
 
 # Python
 __pycache__/
@@ -35,9 +37,18 @@ ENV/
 *.swp
 *.swo
 
-# Logs
-*.log
-
 # OS
 .DS_Store
 Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Config files
+bot_config.json
+dashboard_config.json
+
+# Temporary files
+*.tmp
+*.temp
