--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,8 @@
-# WhatsApp Business API Configuration
-WHATSAPP_TOKEN=your_whatsapp_token_here
-PHONE_NUMBER_ID=your_phone_number_id_here
-VERIFY_TOKEN=your_verify_token_here
+# Telegram Bot Configuration
+TELEGRAM_TOKEN=seu_token_do_botfather_aqui
 
-# Google Sheets Configuration
-SHEET_ID=your_google_sheets_id_here
+# Google Sheets Configuration  
+SHEET_ID=id_da_sua_planilha_google_aqui
 
-# Application Configuration
-FLASK_ENV=development
-FLASK_DEBUG=True
+# Server Configuration
 PORT=8000
-
-# Optional: Your personal phone number for testing
-PERSONAL_NUMBER=your_phone_number_here
